Attempt to fix Owl Carousel taking too much memory on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -191,34 +191,33 @@ img {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#002f4b', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 .parallax__container {
-  clip: rect(0, auto, auto, 0);
+  clip: rect(0,auto,auto,0);
   height: 100%;
   left: 0;
   overflow: hidden;
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: -100;
 }
 .parallax {
-  position: fixed;
-  top: 0;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
-  width: 100%;
-  /* BG behaviour */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: fixed;
+  top: 0;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  width: 100%;
 }
 /*----------------------------------------------
 -------------------MAIN SECTION-----------------
 ------------------------------------------------*/
 #particles-js {
   position: fixed;
-  z-index: -1;
+  z-index: -101;
   height: 100vh;
   width: 100%;
   background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5) 0%, rgba(14, 56, 134, 0.5) 100%); /* FF3.6+ */
@@ -605,8 +604,17 @@ img {
   height: 320px;
   min-width: 320px;
 }
-.owl-item {
-  opacity: 0.3;
+.owl-carousel .owl-stage-outer{
+   overflow: hidden;
+   position: relative;
+   width: 100%;
+   z-index: 1;  /* added this */
+}
+.owl-item { 
+  transform: translateZ(0);
+ -webkit-transform: translateZ(0); 
+ -ms-transform: translateZ(0); 
+  /*opacity: 0.3;*/
   overflow: hidden;
   transition: all 0.8s ease;
 }
